<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/padding_base"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp"
            android:text="@string/external_storage"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_base"
            android:text="@string/file_name"/>

    <EditText
            android:id="@+id/et_file_name"
            android:layout_width="match_parent"
            android:paddingTop="@dimen/padding_base"
            android:layout_height="wrap_content" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_base"
            android:text="@string/content"/>

    <EditText
            android:id="@+id/et_content"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:inputType="text|textMultiLine"
            android:gravity="top"/>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

        <Button
                android:id="@+id/btn_read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read"/>

        <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"/>

    </LinearLayout>

</LinearLayout>